--- a/calculator.html
+++ b/calculator.html
@@ -4,9 +4,9 @@
 		<title>Calculator</title>
 		<meta charset="utf-8">
 		<script type="text/javascript">
-			function cube() {
+			function cuatro() {
 				var num = document.getElementById("n1");
-				num.value = Math.pow(num.value, 3);
+				num.value = Math.pow(num.value, 4);
 			}
 		</script>
 	</head>
@@ -15,7 +15,7 @@
 		Number:
 		<input type="text" id="n1">
 		<p>
-			<button onclick="cube()"> x^3 </button>
+			<button onclick="cuatro()"> x^4 </button>
 		</p>
 	</body>
 </html>
